# inetutils

./: .gitignore  CMakeLists.txt  README.md  build.sh  debug.sh  install_cmake.sh  ping.sh  traceroute.sh
.github/workflows/: cmake.yml
doc/: documentation.docx
ping/: CMakeLists.txt  build.sh  debug.sh  icmp.c  icmp.h  ip.c  ip.h  main.c  ping.c  ping.h  resolve.c  resolve.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  icmp.c  icmp.h  icmp_echo.c  icmp_echo.h  ip.c  ip.h  resolve.c  resolve.h  utils.c  utils.h
src/ping/: CMakeLists.txt  main.c
src/traceroute/: CMakeLists.txt  main.c
